Fix sidebar bleeding into footer

--- a/themes/default/_sass/default.scss
+++ b/themes/default/_sass/default.scss
@@ -93,7 +93,7 @@ main {
 
 	> footer,
 	> article > footer {
-		margin: 2em 0;
+		margin: 2em 0 6em 0;
 		padding: 0 1em;
 	}
 }
